objects/Child__c/Child__c.object-meta.xml
<CustomObject>
    <label>자녀</label>
    <nameField>
        <label>자녀 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>