objects/Child__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>통화</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>