objects/Child__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>롤업 요약로 가장 최근 날짜를 습득하기 위한 레코드</description>
    <label>날짜</label>
    <type>Date</type>
</CustomField>