objects/Child__c/fields/Decimal__c.field-meta.xml
<CustomField>
    <fullName>Decimal__c</fullName>
    <label>숫자</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>