objects/Child__c/fields/Parents__c.field-meta.xml
<CustomField>
    <fullName>Parents__c</fullName>
    <label>부모</label>
    <referenceTo>Parent__c</referenceTo>
    <relationshipLabel>자녀</relationshipLabel>
    <relationshipName>Child_Parents_Rel</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>